# hyperliquid-trading-agent

./: .dockerignore  .env.example  .gitignore  2026-06-18-133535-local-command-caveatcaveat-the-messages-below.txt  2026-06-29-194052-local-command-caveatcaveat-the-messages-liquidations.md  2026-06-29-223255-this-session-is-being-continued-from-a-previous-c.txt  2026-06-30-060329-this-session-is-being-continued-from-a-previous-c.txt  Dockerfile  Makefile  README.md  TESTING.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_high_stakes_decisions.py  0003_position_tracking.py  0004_autonomous_loop.py  0005_signal_evaluation_memory.py  0006_newswire.py  0007_tradfi.py  0008_alpha_event_evaluations.py  0009_governance_authority.py  0010_replay_results.py  0011_engine_event_feature_store.py  0012_candidate_ev_allocation_debate.py  0013_execution_position_reconciliation.py  0014_model_registry_retention.py  0015_hip4_outcomes.py  0016_world_model.py  0017_world_model_supervision.py  0018_liquidations.py  0019_engine_strategy_regime_council_learning.py  0020_engine_candidate_outcome_evidence_spine.py  0021_newswire_discord_publish_ledger.py  0022_service_runtime_boundaries.py  0023_newswire_policy_loop.py  0024_prediction_market_paper.py  0025_engine_ops_hardening.py  0026_newswire_v2.py  0027_operational_notification_outbox.py  0028_wave_supervisor_runs.py  0029_engine_strategy_evaluations.py  0030_canonical_market_universe.py  0031_operational_incidents.py  0032_repair_newswire_symbol_reasons.py  0033_world_model_v2.py  0034_engine_evidence_hardening.py
docs/: autonomy-memory.md  discord-mention-path-runbook.md  engine-paper-readiness-runbook.md  engine-shadow-observation-promotion-package.md  governance-paper-drill.md  hip4-outcome-markets-runbook.md  institutional-engine.md  newswire-optional-adapters.md  newswire-smoke-test.md  newswire-v2.1-operations.md  newswire-v2.md  vault.md  world-model.md
docs/deploy/: hyrule-cloud.md  paper-signoff-canary-2026-07-01.md  runtime-baseline-soak-2026-07-01.md  service-role-runtime.md  step-10-resumption-runbook.md
docs/plans/: 2026-06-14T00-29-13Z-high-stakes-multi-agent-debate-engine-for-hyperliquid-trade-inference.md  2026-06-14T01-47-26Z-institutional-high-stakes-prompt-data-desk-upgrade.md  2026-06-14T21-55-14Z-live-position-tracking-websocket-level-alerts.md  2026-06-15T02-38-17Z-autonomous-trading-loop-market-mental-map-signals-paper-portfolio-discord-signof.md  2026-06-15T04-30-20Z-persistent-alpha-memory-signal-evaluation-loop.md  2026-07-01T00-26-26Z-newswire-discord-news-redesign-plan.md  (+16 more)
hyperliquid_trading_agent/: __init__.py
scripts/: grpc_liq_smoke.py
tests/: conftest.py  test_autonomy.py  test_autonomy_engine_signal_coexistence.py  test_autonomy_memory_loop.py  test_charting.py  test_discord_mention_diagnostics.py  test_engine_alpha_graph.py  test_engine_bandit.py  test_engine_candidate_outcome_attribution.py  test_engine_components.py  test_engine_council.py  test_engine_diagnostics.py  test_engine_diversity.py  test_engine_evidence_hardening.py  test_engine_evidence_loop.py  test_engine_extensions.py  test_engine_monitor.py  test_engine_newsfeed.py  test_engine_operator_proposals.py  test_engine_persistence.py  test_engine_readiness.py  test_engine_regime_features.py  test_engine_risk_gateway.py  test_engine_routes.py  test_engine_schemas.py  test_engine_scorer.py  test_engine_service.py  test_engine_signal_comparison.py  test_engine_signal_quality_v2.py  test_engine_strategy_performance.py  test_engine_strategy_registry.py  test_engine_throttles.py  test_engine_wave1a_strategies.py  test_engine_wave1c_strategies.py  test_engine_wave2.py  test_gate_snapshots.py  test_governance_authority.py  test_governance_dashboard_routes.py  test_governance_decision_context.py  test_governance_review_export.py  (+50 more)
(+299 files in other folders)
