[project]
name = "hyperliquid-trading-agent"
version = "0.1.0"
description = "Hyperliquid trading support agent and Discord bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.8",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "discord.py>=2.5.0",
    "litellm>=1.60.0",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "SQLAlchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "feedparser>=6.0",
    "tenacity>=9.0",
    "websockets>=14.0",
    "hyperliquid-python-sdk>=0.15.0",
    "langgraph>=1.2.5,<2.0.0",
    "alpaca-py>=0.40.0",
    "joblib>=1.4",
    "matplotlib>=3.9",
    "mcp>=1.27,<2",
    "mplfinance>=0.12.10b0",
    "pandas>=2.2",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "aiosqlite>=0.20",
    "ruff>=0.8",
    "mypy>=1.13",
    "grpcio-tools>=1.66",  # regenerate the vendored liquidations gRPC stubs (codegen only)
]
# Optional: live Hyperliquid confirmed/global liquidations via a managed gRPC
# StreamFills provider. Not pulled by default; the adapter stays NotConfigured
# without it. Pinned to match the committed generated stubs (protobuf 6.x gencode).
grpc = [
    "grpcio>=1.81",
    "protobuf>=6.33,<7",
]

[project.scripts]
hyperliquid-trading-agent = "hyperliquid_trading_agent.app.main:main"
hyperliquid-trading-agent-runtime = "hyperliquid_trading_agent.app.runtime:main"
hyperliquid-trading-agent-vault = "hyperliquid_trading_agent.app.vault_admin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hyperliquid_trading_agent"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["hyperliquid_trading_agent/app/liquidations/adapters/proto"]

[tool.ruff.lint]
select = ["E", "F", "I", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ['hyperliquid_trading_agent/app/liquidations/adapters/proto/']

[[tool.mypy.overrides]]
module = "hyperliquid_trading_agent.app.liquidations.adapters.proto.*"
ignore_errors = true
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
